fix stupid line heights on mobile

--- a/src/components/skilltree/skilltree.scss
+++ b/src/components/skilltree/skilltree.scss
@@ -118,7 +118,7 @@
     -webkit-transform: rotateY(-180deg) translateZ(-1px);
     font-size: calc( var(--node-size) * 0.09 );
     font-weight: 300;
-    line-height: 11pt;
+    line-height: calc( var(--node-size) * 0.12 );
 }
 
 .node:hover > .back {
